--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div>
         <img src="images/pic.png" id="pic">
     </div>
-    <div class="twoie"><img src="images/new.png" id="newpic">
+    <div class="the2"><img src="images/new.png" id="newpic">
     <img src="images/bepro.png" id="pro"></div>
     <div><img src="images/thadi.png" id="thadi"></div>
     <div class="monials">
@@ -75,5 +75,6 @@
             <div><p>How to place an order <br>Ways of payment <br>Exchange and return of goods<br>Warranty Service <br>Order Tracking <br>Before you buy</p></div>
             <div><p>2030 company.All Rights Reserved. <br>Privacy Policy <br>Terms and Conditions</p></div>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
